<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- android_large___10 strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="booking_summary_string">Booking Summary</string>
	<string name="ayana_resort_string">AYANA Resort</string>
	<string name="bali__indonesia_string">Bali, Indonesia</string>
	<string name="booking_date_string">Booking Date</string>
	<string name="check_in_string">Check-in</string>
	<string name="chcek_out_string">Chcek-out</string>
	<string name="guests_string">Guests</string>
	<string name="room_s__string">Room(s)</string>
	<string name="amount_string">Amount</string>
	<string name="tax_string">Tax</string>
	<string name="total_string">Total</string>
	<string name="__350_usd__night_string">$350 USD /night</string>
	<string name="_1_oct_2023_string">1-Oct-2023</string>
	<string name="__350_x_2_string">$350 x 2</string>
	<string name="__30_string">$30</string>
	<string name="__730_string">$730</string>
	<string name="_24_oct_2023_string">24-Oct-2023</string>
	<string name="_26_oct_2023_string">26-Oct-2023</string>
	<string name="_3_string">3</string>
	<string name="_1_string">1</string>
	<string name="continue_to_payment_string">CONTINUE TO PAYMENT</string>
</resources>